fix img loading bug; add logic for max rolls after 3 dynamite

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <td><img onClick="toggleLock(this)" class="dice" id="dice2" src="img/3.png"></td>
                     <td><img onClick="toggleLock(this)" class="dice" id="dice3" src="img/4.png"></td>
                     <td><img onClick="toggleLock(this)" class="dice" id="dice4" src="img/5.png"></td>
+                    <!-- download dice face that is not displayed -->
+                    <td hidden><img src="img/6.png"></td>
                 </tr>
                 <tr id="keepRow" hidden>
                     <td>Keep</td>
