update maxRolls text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="top" align="center">
             <h1>BANG!! Dice Roller</h1>
             <h2 id="rollCount">Roll Number: 0</h2>
-            <h3 id="maxRolls" hidden>MAX ROLLS</h3>
+            <h3 id="maxRolls" hidden>Resolve Dice - End Turn</h3>
             <button id="resetButton" class="btn" onClick="reset()" hidden> Reset </button>
             <button id="rollButton" class="btn" onClick="rollDice()"> Roll the dice </button>
             
